# snowflake-cli

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEBUG_BUILD.md  Dockerfile  FEDORA_QUICK_START.md  FEDORA_RPM_DEBUG.md  LEGAL.md  LICENSE  README.md  RELEASE-NOTES.md  SECURITY.md  STREAMLIT_FIX_PLAN.md  a.py  app.toml  build-docker.sh  build_binary.py  build_pyapp_binary.sh  click_extensions.py  config.py  conftest.py  performance_history_analysis.py  pylock.toml  pyproject.toml  pyproject.toml.backup  random-pj.py  requirements-dev.txt  requirements.txt  scr 1.sql  setup.py  snow.spec  snow_connector.py  snowcli.py  snowcli.spec  snowcli_feedback.md  spec.yml  t.xml  (+4 more)
.cargo/: config.toml
.compat/: build_snowflake-cli-labs.sh  snowflake-cli-labs_version_sync.py
.compat/snowflake-cli-labs/: README.md  RELEASE-NOTES.md  pyproject.toml
.cursor/rules/: deploy-snowflake-app.md
.github/: CODEOWNERS  pull_request_template.md  repo_meta.yaml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/scripts/: cortex_e2e_review.py  create_jira_tickets.py  create_jira_tickets.sh  parse_cves.py
.github/workflows/: build.yaml  changelog.yaml  changes.yaml  cleanup.yaml  cortex_review.yaml  daily-cve-check.yaml  e2e_test.yaml  integration_test.yaml  jira_close.yml  jira_comment.yml  jira_issue.yml  lint.yaml  matrix.yaml  nix-build.yml  ok_to_test.yml  old_publish.yaml  packaging.yaml  performance_history_analysis.yaml  performance_test.yaml  publish.yaml  show_info.yaml  test.yaml  (+18 more)
.snyk/: dependency-sync.py  req-auto-generated.txt  requirements.txt
compat/snowflake-cli-labs/: README.md  pyproject.toml
core/: .gitignore  CONTRIBUTING.md  pyproject.toml  snowcli.spec  tox.ini
example/: tiny3.py  tiny3.yml
fips/: Dockerfile
lib/: setup.py  snowflake_ml_feature_store_decl-0.1.0-py3-none-any.whl
lsp_api_contracts/: Makefile  lsp_api_contracts.yaml
plugin-template/: conftest.py  cookiecutter.json
plugin-template/{{cookiecutter.plugin_name}}/: README.md  pyproject.toml
plugin-template/{{cookiecutter.plugin_name}}/src/{{cookiecutter.package_namespace}}/{{cookiecutter.plugin_module}}/: handler.py  interface.py  plugin_spec.py
plugin-template/{{cookiecutter.plugin_name}}/tests/: test_interface.py
plugins/connection/: pyproject.toml
plugins/connection/src/snowcli_connection_plugin/: connection_plugin_hook_impl.py
plugins/snowpark-extensions/: pyproject.toml
plugins/snowpark-extensions/src/snowcli_function_plugin/: function_plugin_hook_impl.py
plugins/snowpark-extensions/src/snowcli_package_plugin/: package_plugin_hook_impl.py
plugins/snowpark-extensions/src/snowcli_say_hello_plugin/: say_hello.py  say_hello_plugin_hook_impl.py
scripts/: check_release_notes_duplicates.py  cleanup.py  create_rc.sh  debug.py  lock_subdependencies.py  main.py  patch_universal_driver.py  run_tests_preprod.sh  run_tests_qa.sh  run_tests_with_retry.py  table.sql
snyk/: dependency-sync.py  requirements.txt  requirements.txt.backup
test_external_plugins/broken_plugin/: pyproject.toml
test_external_plugins/broken_plugin/src/snowflakecli/test_plugins/broken_plugin/: commands.py  plugin_spec.py
test_external_plugins/failing_plugin/: pyproject.toml
test_external_plugins/failing_plugin/src/snowflakecli/test_plugins/failing_plugin/: commands.py  plugin_spec.py
test_external_plugins/multilingual_hello_command_group/: pyproject.toml
test_external_plugins/multilingual_hello_command_group/src/snowflakecli/test_plugins/multilingual_hello/: commands.py  hello_language.py  manager.py  plugin_spec.py
test_external_plugins/override_build_in_command/: pyproject.toml
test_external_plugins/override_build_in_command/src/snowflakecli/test_plugins/override_build_in_command/: commands.py  plugin_spec.py
test_external_plugins/snowpark_hello_single_command/: pyproject.toml
test_external_plugins/snowpark_hello_single_command/src/snowflakecli/test_plugins/snowpark_hello/: commands.py  manager.py  plugin_spec.py
testing_utils/: fixtures.py
tests/: conftest.py  snowsql.toml  streamlit_app_launcher.py  test.toml  test_about.py  test_check_release_notes_duplicates.py  test_cli.py  test_command_options.py  test_command_registration.py  test_common_decorators.py  test_common_global_context.py  test_config.py  test_config_provider_integration.py  test_connection.py  test_connection_config.py  test_connection_diagnostic.py  test_docs_generation_output.py  test_experimental_behaviour.py  test_external_plugins.py  test_help_messages.py  test_init.py  test_loaded_modules.py  test_logs.py  test_lsp_interface.py  test_main.py  test_oauth.py  test_package.py  test_performance.py  test_printing.py  test_procedure.py  test_project_definition_generate_json_schema.py  test_project_initialisation.py  test_registry.py  test_render.py  test_repl.py  test_secret_type.py  test_snow_connector.py  test_snow_typer.py  test_sql.py  test_stage.py  (+4 more)
tests_common/: __init__.py  conftest.py  deflake.py  feature_flag_utils.py  path_utils.py  project_utils.py  pycharm_debug.py  pytest_json_report.py  telemetry_utils.py
tests_e2e/: conftest.py  fixtures.py  test_config.py  test_error_handling.py  test_import_snowsql_connections.py  test_installation.py  test_nativeapp.py  test_snowpark_examples.py
tests_integration/: conftest.py  snowflake_connector.py  test_config.py  test_connection.py  test_cortex.py  test_cp.py  test_dbt.py  test_dcm_project.py  test_debug.py  test_encoding.py  test_external_plugins.py  test_flaky.py  test_function.py  test_git.py  test_init.py  test_logs.py  test_nativeapp.py  test_notebooks.py  test_object.py  test_oidc.py  test_package.py  test_procedure.py  test_procedure_coverage.py  test_registry.py  test_session_token.py  test_single_transaction_autocommit.py  test_snowpark.py  test_snowpark_external_access.py  test_snowpark_function.py  test_sql.py  test_sql_templating.py  test_stage.py  test_streamlit.py  test_streamlit_old.py  test_temporary_connection.py  test_utils.py  test_warehouse.py  test_workload_identity.py
(+2239 files in other folders)
