[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowflake-cli-labs"
authors = [{ name = "Snowflake Inc." }]
license = { file = "LICENSE" }
dynamic = ["version"]
requires-python = ">=3.8"
description = "Snowflake CLI"
readme = "README.md"
dependencies = [
  "jinja2==3.1.4",
  "pluggy==1.5.0",
  "PyYAML==6.0.1",
  "rich==13.7.1",
  "requests==2.31.0",
  "requirements-parser==0.9.0",
  "setuptools==69.5.1",
  "snowflake-connector-python[secure-local-storage]==3.10.0",
  "tomlkit==0.12.3",
  "typer==0.12.3",
  "urllib3>=1.21.1,<2.3",
  "GitPython==3.1.43",
  "pip",
  "pydantic==2.7.1",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: SQL",
  "Topic :: Database",
]

[project.optional-dependencies]
development = [
  "coverage==7.5.0",
  "pre-commit>=3.5.0",
  "pytest==8.2.0",
  "pytest-randomly==3.15.0",
  "syrupy==4.6.1",
]

[project.urls]
"Source code" = "https://github.com/snowflakedb/snowflake-cli"
"Bug Tracker" = "https://github.com/snowflakedb/snowflake-cli/issues"

[project.scripts]
snow = "snowflake.cli.app.__main__:main"

[tool.coverage.report]
exclude_also = ["@(abc\\.)?abstractmethod", "@(abc\\.)?abstractproperty"]

[tool.hatch.version]
path = "src/snowflake/cli/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/snowflake"]

[tool.hatch.envs.default]
features = ["development"]

[tool.hatch.envs.default.scripts]
test = ["pytest --snapshot-warn-unused tests/"]
test-cov = [
  "coverage run --source=snowflake.cli --module pytest --snapshot-warn-unused tests/ ",
  "coverage run --source=snowflake.cli --module pytest -m loaded_modules --snapshot-warn-unused tests/ ",
  "coverage report",
]

[tool.hatch.envs.e2e]
template = "e2e"
features = ["development"]

[tool.hatch.envs.e2e.scripts]
test = ["pytest -m e2e --snapshot-warn-unused --durations=0"]

[tool.hatch.envs.performance]
template = "performance"
features = ["development"]

[tool.hatch.envs.performance.scripts]
test = ["pytest -m performance"]

[tool.hatch.envs.integration]
template = "integration"
pre-install-commands = [
  "pip install test_external_plugins/snowpark_hello_single_command",
  "pip install test_external_plugins/multilingual_hello_command_group",
]
features = ["development"]

[tool.hatch.envs.integration.scripts]
test = ["pytest -m integration --snapshot-warn-unused"]
test-experimental = [
  "pytest -m integration_experimental --snapshot-warn-unused",
]

[[tool.hatch.envs.local.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.coverage.run]
source = ["snowflake.cli"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "N",
  "I",      # isort
  "G",      # flake8-logging-format
  "N",      # pep8 naming
  "A",      # flake 8 builtins
  "TID252", # relative imports
  "SLF",    # Accessing private methods
  "F401",   # unused imports
  "F403",   # star imports
]

[tool.pytest.ini_options]
addopts = "-m 'not integration and not performance and not e2e and not spcs and not loaded_modules and not integration_experimental'"
markers = [
  "integration: mark test as integration test",
  "performance: mark test as performance test",
  "e2e: mark test to execute on Snowflake CLI installed in fresh virtual environment",
  "loaded_modules: checks loaded modules",
  "patch_app_version: sets app version to 0.0.0-test_patched",
  "integration_experimental: experimental integration test",
]


[tool.codespell]
skip = 'tests/*'
