# Copyright (c) 2024 Snowflake Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowflake-cli-labs"
authors = [{ name = "Snowflake Inc." }]
license = { file = "LICENSE" }
dynamic = ["version"]
requires-python = ">=3.10"
description = "Snowflake CLI"
readme = "README.md"
dependencies = [
  "jinja2==3.1.4",
  "pluggy==1.5.0",
  "PyYAML==6.0.1",
  "packaging",
  "rich==13.7.1",
  "requests==2.32.3",
  "requirements-parser==0.11.0",
  "setuptools==74.1.0",
  'snowflake.core==0.8.0; python_version < "3.12"',
  "snowflake-connector-python[secure-local-storage]==3.12.1",
  'snowflake-snowpark-python>=1.15.0;python_version < "3.12"',
  "tomlkit==0.13.2",
  "typer==0.12.5",
  "urllib3>=1.24.3,<2.3",
  "GitPython==3.1.43",
  "pip",
  "pydantic==2.8.2",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: SQL",
  "Topic :: Database",
]

[project.optional-dependencies]
development = [
  "coverage==7.6.1",
  "pre-commit>=3.5.0",
  "pytest==8.3.2",
  "pytest-randomly==3.15.0",
  "syrupy==4.6.1",
]

[project.urls]
"Source code" = "https://github.com/snowflakedb/snowflake-cli"
"Bug Tracker" = "https://github.com/snowflakedb/snowflake-cli/issues"

[project.scripts]
snow = "snowflake.cli._app.__main__:main"

[tool.coverage.report]
exclude_also = ["@(abc\\.)?abstractmethod", "@(abc\\.)?abstractproperty"]

[tool.hatch.version]
path = "src/snowflake/cli/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/snowflake"]

[tool.hatch.envs.default]
features = ["development"]

[tool.hatch.envs.default.scripts]
test = ["pytest tests/"]
test-cov = [
  "coverage run --source=snowflake.cli --module pytest tests/ ",
  "coverage run --source=snowflake.cli --module pytest -m loaded_modules tests/ ",
  "coverage report",
]

[tool.hatch.envs.e2e]
template = "e2e"
features = ["development"]

[tool.hatch.envs.e2e.scripts]
test = ["pytest -m e2e --durations=0"]
cleanup = ["python scripts/cleanup.py"]

[tool.hatch.envs.performance]
template = "performance"
features = ["development"]

[tool.hatch.envs.performance.scripts]
test = ["pytest -m performance"]

[tool.hatch.envs.integration]
template = "integration"
pre-install-commands = [
  "pip install test_external_plugins/snowpark_hello_single_command",
  "pip install test_external_plugins/multilingual_hello_command_group",
  "pip install pytest-xdist",
]
features = ["development"]

[tool.hatch.envs.integration.scripts]
test = ["python scripts/run_tests_with_retry.py Integration -m integration -n6 --dist=worksteal"]

[[tool.hatch.envs.local.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.coverage.run]
source = ["snowflake.cli"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "N",
  "I",      # isort
  "G",      # flake8-logging-format
  "N",      # pep8 naming
  "A",      # flake 8 builtins
  "TID252", # relative imports
  "SLF",    # Accessing private methods
  "F401",   # unused imports
  "F403",   # star imports
  "FA100",  # Missing from __future__ import annotations
  "W605",   # Invalid escape sequences
]

[tool.pytest.ini_options]
addopts = "-vv --maxfail=10 -m 'not integration and not performance and not e2e and not spcs and not loaded_modules and not integration_experimental'"
markers = [
  "integration: mark test as integration test",
  "performance: mark test as performance test",
  "e2e: mark test to execute on Snowflake CLI installed in fresh virtual environment",
  "loaded_modules: checks loaded modules",
  "patch_app_version: sets app version to 0.0.0-test_patched",
  "integration_experimental: experimental integration test",
]


[tool.codespell]
skip = 'tests/*'
