# Copyright (c) 2024 Snowflake Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
license = { file = "LICENSE" }
name = "snowflake-cli-labs"
authors = [{ name = "Snowflake Inc." }]
dynamic = ["version"]
requires-python = ">=3.10"
description = "Snowflake CLI"
readme = "README.md"
dependencies = ["snowflake-cli==3.0.0rc2"]
classifiers = ["Development Status :: 7 - Inactive"]

[project.urls]
"Source code" = "https://github.com/snowflakedb/snowflake-cli"
"Bug Tracker" = "https://github.com/snowflakedb/snowflake-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["README.md"]
exclude = ["/compat"]

[tool.hatch.version]
path = "../../src/snowflake/cli/__about__.py"
