[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowflake-cli-labs"
authors = [{ name = "Snowflake Inc." }]
license = { file = "LICENSE" }
dynamic = ["version"]
requires-python = ">=3.8"
description = "Snowflake CLI"
readme = "README.md"
dependencies = ["snowflake-cli==2.0.0"]
classifiers = [
  "Development Status :: 7 - Inactive"
]

[project.urls]
"Source code" = "https://github.com/Snowflake-Labs/snowcli"
"Bug Tracker" = "https://github.com/Snowflake-Labs/snowcli/issues"

[tool.hatch.build.targets.wheel]
packages = ["README.md"]

[tool.hatch.version]
path = "../../src/snowflake/cli/__about__.py"
