[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snowflake-cli-snowpark-extensions-plugin"
requires-python = ">=3.8"
dependencies = [
  "snowflake-cli-labs>=1.0.1"
]
version = "0.0.1"

[project.entry-points."snowcli.plugin"]
snowpark-function = "snowcli_function_plugin.function_plugin_hook_impl"
snowpark-package = "snowcli_package_plugin.package_plugin_hook_impl"
snowpark-say-hello = "snowcli_say_hello_plugin.say_hello_plugin_hook_impl"
