[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "override-build-in-commands"
requires-python = ">=3.8"
dependencies = [
    "snowflake-cli-labs>=2.0.0"
]
version = "0.0.1"

[project.entry-points."snowflake.cli.plugin.command"]
broken_plugin = "snowflakecli.test_plugins.broken_plugin.plugin_spec"

[tool.hatch.build.targets.wheel]
packages = ["src/snowflakecli"]
